# interim

./: .gitignore  README.md  arm-build.sh  arm-deploy.sh  bomberjacket-arm.elf  build-arm.sh  build-kernel.sh  build-newlib.sh  build-os.sh  build_386.sh  build_amiga.sh  cloc.sh  deploy-arm.sh  deploy_386.sh  editor-arm.l  format.sh  imx233-build.sh  init-disk.sh  install.sh  kernel.img  libnix  m68k-ops.s  nat.sh  qemu-386.sh  r3d.h  raspi.c  raspi.h  rpi2-build.sh  rpi2-deploy.sh  rpi2-release.sh  run-arm.sh  run.sh  runiso-386.sh  setup-bridge.sh
newlib/newlib-2.2.0/etc/: ChangeLog  Makefile.in  configure  configure.in  gnu-oids.texi  standards.texi
newlib/newlib-2.2.0/libgloss/: ChangeLog  Makefile.in  README  configure  configure.in
newlib/newlib-2.2.0/libgloss/aarch64/: Makefile.in  _exit.c  _kill.c  configure  configure.in  crt0.S  elf-aem-validation.specs  elf-aem-ve.specs  elf-rdimon.specs  svc.h  syscalls.c
newlib/newlib-2.2.0/libgloss/aarch64/cpu-init/: Makefile.in  aclocal.m4  configure  configure.in  rdimon-aem-el3.S
newlib/newlib-2.2.0/libgloss/arm/: Makefile.in  configure  configure.in  crt0.S  elf-nano.specs  linux-crt0.c  linux-syscalls0.S  redboot-crt0.S  syscalls.c  trap.S
newlib/newlib-2.2.0/libgloss/arm/cpu-init/: Makefile.in  rdimon-aem.S
newlib/newlib-2.2.0/libgloss/bfin/: Makefile.in  _exit.c  configure  syscalls.c
newlib/newlib-2.2.0/libgloss/config/: default.mh
newlib/newlib-2.2.0/libgloss/cr16/: Makefile.in  configure  configure.in  fstat.c  getpid.c  isatty.c  kill.c  stat.c
newlib/newlib-2.2.0/libgloss/cris/: Makefile.in  configure  gensyscalls
newlib/newlib-2.2.0/libgloss/crx/: configure
newlib/newlib-2.2.0/libgloss/d30v/: configure
newlib/newlib-2.2.0/libgloss/doc/: Makefile.in  configure  porting.texi
newlib/newlib-2.2.0/libgloss/epiphany/: Makefile.in  _isatty.c  config.h.in  configure  configure.in  crt0.S
newlib/newlib-2.2.0/libgloss/frv/: isatty.c
newlib/newlib-2.2.0/libgloss/hp74x/: configure
newlib/newlib-2.2.0/libgloss/i386/: configure
newlib/newlib-2.2.0/libgloss/i960/: configure
newlib/newlib-2.2.0/libgloss/iq2000/: configure
newlib/newlib-2.2.0/libgloss/libnosys/: Makefile.in  configure  configure.in  isatty.c
newlib/newlib-2.2.0/libgloss/lm32/: Makefile.in  configure  configure.in  isatty.c
newlib/newlib-2.2.0/libgloss/m32c/: Makefile.in
newlib/newlib-2.2.0/libgloss/m32r/: Makefile.in  configure
newlib/newlib-2.2.0/libgloss/m68hc11/: configure
newlib/newlib-2.2.0/libgloss/m68k/: configure
newlib/newlib-2.2.0/libgloss/mcore/: configure
newlib/newlib-2.2.0/libgloss/mep/: Makefile.in  configure
newlib/newlib-2.2.0/libgloss/microblaze/: Makefile.in  _hw_exception_handler.S  _interrupt_handler.S  configure  configure.in
newlib/newlib-2.2.0/libgloss/mips/: Makefile.in  configure  configure.in  idt32.ld  idt64.ld  mti32.ld  mti64.ld  mti64_64.ld  mti64_n32.ld  sde32.ld  sde64.ld
newlib/newlib-2.2.0/libgloss/mn10200/: configure
newlib/newlib-2.2.0/libgloss/mn10300/: Makefile.in  configure
newlib/newlib-2.2.0/libgloss/moxie/: Makefile.in  configure  configure.in  crt0.S  fstat.c  getpid.c  isatty.c  kill.c  print.c  putnum.c  qemu-time.c  sim-lseek.S  sim-lseek.c  sim-time.c  sim-unlink.S  stat.c
newlib/newlib-2.2.0/libgloss/msp430/: Makefile.in  cio.c  ciosyscalls.S  configure.in  crt0.S  crt_movedata.S  crtn.S  memmodel.h  msp430-sim.ld  msp430.ld  msp430F5438A-l.ld  msp430F5438A-s.ld  msp430xl-sim.ld  sbrk.c  syscalls.S  write.c
newlib/newlib-2.2.0/libgloss/nds32/: Makefile.in  configure
newlib/newlib-2.2.0/libgloss/or1k/: Makefile.in  aclocal.m4  configure  configure.in  crt0.S  exceptions-asm.S  impure.c  interrupts-asm.S  or1k-internals.h  or1k_uart.c  or1k_uart.h  sbrk.c  syscalls.c  timer.c  util.c
newlib/newlib-2.2.0/libgloss/or1k/boards/: optimsoc.S
newlib/newlib-2.2.0/libgloss/pa/: configure
newlib/newlib-2.2.0/libgloss/rs6000/: Makefile.in  configure
newlib/newlib-2.2.0/libgloss/rx/: Makefile.in  configure  crt0.S  rx-sim.ld  rx.ld
newlib/newlib-2.2.0/libgloss/sparc/: configure
newlib/newlib-2.2.0/libgloss/sparc/libsys/: configure
newlib/newlib-2.2.0/libgloss/sparc_leon/: Makefile.in  configure  configure.in  console_dbg.c  locore_atexit.c
newlib/newlib-2.2.0/libgloss/sparc_leon/asm-leon/: clock.h  leonbare_kernel_queue.h  queue.h
newlib/newlib-2.2.0/libgloss/spu/: Makefile.in  configure  configure.in
newlib/newlib-2.2.0/libgloss/tic6x/: Makefile.in  aclocal.m4  configure
newlib/newlib-2.2.0/libgloss/v850/: Makefile.in  configure  crt0.S  sim.ld
newlib/newlib-2.2.0/libgloss/wince/: configure
newlib/newlib-2.2.0/libgloss/xc16x/: Makefile.in  aclocal.m4  configure  configure.in  misc.c
newlib/newlib-2.2.0/libgloss/xstormy16/: configure  isatty.c
newlib/newlib-2.2.0/newlib/: ChangeLog  HOWTO  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.host  configure.host.orig  configure.in  newlib.hin
newlib/newlib-2.2.0/newlib/doc/: Makefile.am  Makefile.in  aclocal.m4  configure  doc.str  makedoc.c
newlib/newlib-2.2.0/newlib/iconvdata/: Makefile.am  Makefile.in  configure  configure.in
newlib/newlib-2.2.0/newlib/libc/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  libc.texinfo
newlib/newlib-2.2.0/newlib/libc/argz/: Makefile.in  argz_add.c  argz_append.c  argz_count.c  argz_create.c  argz_create_sep.c  argz_delete.c  argz_extract.c  argz_next.c  argz_stringify.c  envz_merge.c
newlib/newlib-2.2.0/newlib/libc/ctype/: Makefile.am  Makefile.in  ctype_.c  ctype_cp.h  ctype_iso.h  isalnum.c  isalpha.c  isblank.c  iscntrl.c  isdigit.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  iswalpha.c  iswblank.c  iswcntrl.c  iswprint.c  iswpunct.c  iswspace.c  isxdigit.c  jp2uc.c  local.h  tolower.c  toupper.c  towlower.c  towupper.c  utf8alpha.h  utf8print.h
newlib/newlib-2.2.0/newlib/libc/errno/: Makefile.in
newlib/newlib-2.2.0/newlib/libc/iconv/: Makefile.am  iconv.tex  (+1 more)
newlib/newlib-2.2.0/newlib/libm/: Makefile.am  Makefile.in  configure  configure.in  libm.texinfo
(+1668 files in other folders)
